--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,7 @@ body {
 .home,
 .timer {
   font-size: 300%;
-  background-color: rebeccapurple;
+  background-color: rgba(156, 107, 186, 0.72);
   height: 90vh;
   width: 100vw;
   text-align: center;
@@ -72,4 +72,21 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 8px;
+}
+
+.nbl {
+  background-color: rgba(156, 107, 186, 0.72);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 90vh;
+}
+
+.nblButton {
+  font-size: 200%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 15vh;
+  width: 80vw;
 }
