--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -84,9 +84,52 @@ body {
 }
 
 .nblButton {
+  background-color: #e4e2e2;
   font-size: 200%;
   border: 2px solid black;
   border-radius: 10px;
-  height: 15vh;
-  width: 80vw;
+  height: 18vh;
+  width: 84vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.submitform {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.or {
+  font-size: 80%;
+  align-self: center;
+}
+
+select {
+  border: 1px solid gray;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.submit {
+  background-color: rgba(156, 107, 186, 0.72);
+  border: 1px solid #666;
+  border-radius: 4px;
 }
