--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,12 +62,16 @@ body {
 }
 
 .startStop {
-  background-color: transparent;
+  background-color: rgba(92, 170, 95, 0.8);
   font-size: 80%;
   height: 65%;
   width: 70%;
   border: 2px solid black;
   border-radius: 50%;
+}
+
+#active {
+  background-color: rgba(145, 38, 38, 0.9);
 }
 
 .averages {
