--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,15 @@ body {
   padding-top: 30px;
 }
 
+H1, H2, H3, span {
+  font-family: Pathway Gothic One, sans-serif;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: Cormorant, serif;
+}
+
 #root {
   height: 650px;
   width: 360px;
@@ -23,7 +32,7 @@ body {
 }
 
 .nav {
-  background-color: #e4e2e2;
+  background-color: #b3dec1;
   font-size: 100%;
   display: flex;
   flex-flow: row nowrap;
@@ -34,18 +43,21 @@ body {
 .nav a {
   height: 100%;
   color: black;
-  border: 1px solid #666;
+  border: 0.5px solid #666;
   flex-basis: 25%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
+  padding-left: 2px;
+  padding-right: 2px; 
 }
 
 .home,
 .timer {
   font-size: 300%;
-  background-color: rgba(156, 107, 186, 0.72);
+  background-color: rgb(247, 247, 247);  
   height: 90%;
   width: 100%;
   text-align: center;
@@ -96,7 +108,7 @@ body {
 }
 
 .nbl {
-  background-color: rgba(156, 107, 186, 0.72);
+  background-color: #E8D2AE;  
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -105,7 +117,7 @@ body {
 }
 
 .nblButton {
-  background-color: #e4e2e2;
+  background-color: #daa38b;
   font-size: 200%;
   border: 2px solid black;
   border-radius: 10px;
@@ -115,6 +127,18 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.breast {
+  font-family: Cormorant, serif;
+}
+
+.bottle {
+  font-family: Cormorant, serif;
+}
+
+.notes {
+  font-family: Cormorant, serif;
 }
 
 .submitform {
@@ -150,13 +174,14 @@ form {
 }
 
 .submit {
-  background-color: rgba(156, 107, 186, 0.72);
+  font-family: Cormorant, serif;  
+  background-color: #B3DEC1;
   border: 1px solid #666;
   border-radius: 4px;
 }
 
 .profile {
-  background-color: rgba(156, 107, 186, 0.72);
+  background-color: rgb(247, 247, 247);    
   height: 90%;
 }
 
@@ -198,7 +223,7 @@ form {
 }
 
 .momLog {
-  background-color: rgba(156, 107, 186, 0.72);
+  background-color: rgb(247, 247, 247);  
   height: 90%;
   max-height: 90%;
 }
