--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -199,6 +199,11 @@ form {
   border: 1px solid #666;
   border-radius: 4px;
   height: 25px;
+  font-size: initial;
+}
+
+.buttonfeed {
+  font-size: small;  
 }
 
 .submittwo {
@@ -208,6 +213,7 @@ form {
   border: 1px solid #666;
   border-radius: 4px;
   height: 25px;  
+  font-size: initial;
 }
 
 .profile {
@@ -219,11 +225,27 @@ form {
   font-size: 200%;
   padding-top: 10px;
   margin-top: 0;
+  padding-left: 10px;
 }
 
 .profile h2 {
   flex-basis: 100%;
   text-align: center;
+}
+
+.image {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.profileupload {
+  margin-bottom: 10px;
+}
+
+.wallpaper {
+  background-color: #daa38b;
+
 }
 
 .babyprof {
@@ -246,6 +268,35 @@ form {
   color: black;
   text-align: right;
   padding: 4px 6px;
+}
+
+.babyprofs {
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.profilebutton {
+  background-color: #daa38b;
+  font-size: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 18%;
+  width: 35%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.baby {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;  
+}
+
+.babyList {
+  list-style: none;
+  padding-left: 0px;
 }
 
 .rbc-header {
@@ -287,4 +338,9 @@ div.rbc-event {
 
 a.rbc-show-more {
   color: #3A405A;
+}
+
+.momprof {
+  padding-left: 7px;
+  padding-right: 7px;
 }
