--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,13 +10,14 @@ body {
   padding-top: 30px;
 }
 
-H1, H2, H3, span, .startStop, .counter {
+H1, H2, H3, span, label, .profilebutton, .startStop, .counter {
   font-family: Pathway Gothic One, sans-serif;
   text-transform: uppercase;
 }
 
 p {
   font-family: Cormorant, serif;
+  font-size: large; 
 }
 
 #root {
@@ -244,8 +245,12 @@ form {
 }
 
 .wallpaper {
-  background-color: #daa38b;
-
+  width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
 
 .babyprof {
@@ -273,6 +278,9 @@ form {
 .babyprofs {
   padding-left: 7px;
   padding-right: 7px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .profilebutton {
@@ -297,6 +305,18 @@ form {
 .babyList {
   list-style: none;
   padding-left: 0px;
+  width: 100%;
+}
+
+.babybutton {
+  background-color: #daa38b;
+  font-size: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 18%;
+  width: 35%;
+  display: inline;
+
 }
 
 .rbc-header {
@@ -343,4 +363,18 @@ a.rbc-show-more {
 .momprof {
   padding-left: 7px;
   padding-right: 7px;
+}
+
+.imageupload {
+  background-color: #daa38b;
+  font-size: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 18%;
+  width: 35%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 6px 3px 6px;
 }
