--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,47 @@ p {
   width: 100%;
 }
 
+div.log {
+  width: 100%;
+  height: 100%;
+  background-color: #B3DEC1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url('../data/BabySizes/mothernative1.png');
+  background-size: 77% 45%;
+  background-repeat: no-repeat;
+  background-position: 50% 75%;
+}
+
+.log, h1 {
+  margin-bottom: 0;
+}
+
+.mothernative {
+  font-family: 'Satisfy', cursive;
+  text-transform: lowercase;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 300px;
+  height: 85px;
+  text-align: center;
+  font-size: 300%;
+}
+
+.loginbtn {
+  background-color: #daa38b;
+  font-size: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 10%;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .nav {
   background-color: #b3dec1;
   font-size: 100%;
