--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ body {
   padding-top: 30px;
 }
 
-H1, H2, H3, span, label, .profilebutton, .startStop, .counter, .babybutton {
+H1, H2, H3, span, label, .profilebutton, .startStop, .counter, .babybutton, .createBabyButton {
   font-family: Pathway Gothic One, sans-serif;
   text-transform: uppercase;
 }
@@ -103,6 +103,13 @@ div.log {
   height: 90%;
   width: 100%;
   text-align: center;
+}
+
+.home {
+  background-size: 250px 400px;
+  background-image: url('../data/BabySizes/pear17.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .timerTop {
@@ -357,6 +364,32 @@ form {
   width: 30%;
   display: inline;
   align-self: center;
+}
+
+.newBaby {
+  padding: 7px;
+}
+
+.createBabyButton {
+  background-color: #daa38b;
+  font-size: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.newBabyLabel {
+  margin-top: 15px;
+}
+
+.newBabyInput {
+  border-radius: 4px;
 }
 
 .rbc-header {
