--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -366,6 +366,9 @@ form {
   padding-left: 0px;
   width: 100%;
   height: 230px;
+  overflow: scroll;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
 }
 
 .babybutton {
@@ -373,6 +376,7 @@ form {
   font-size: 100%;
   border: 2px solid black;
   border-radius: 10px;
+  margin-top: 2px;
   height: 5%;
   width: 30%;
   display: inline;
