--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -357,18 +357,19 @@ form {
 
 .baby {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .babyList {
   list-style: none;
   padding-left: 0px;
-  width: 100%;
+  width: 90%;
   height: 230px;
   overflow: scroll;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
+  border-radius: 2px;
 }
 
 .babybutton {
