--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,8 +20,6 @@ label,
 .counter,
 .babybutton,
 .createBabyButton {
-  font-family: Pathway Gothic One, sans-serif;
-H1, H2, H3, span, label, .profilebutton, .startStop, .counter, .babybutton, .createBabyButton {
   font-family: 'Pathway Gothic One', sans-serif;
   text-transform: uppercase;
 }
@@ -313,6 +311,7 @@ form {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 14px;
 }
 
 .profileupload {
@@ -356,6 +355,11 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.logout {
+  display: flex;
+  justify-content: space-between;
 }
 
 .profilebutton {
@@ -468,7 +472,13 @@ a.rbc-show-more {
   padding-right: 7px;
 }
 
-.imageupload {
+.logout>span {
+  font-size: 1.17em;
+  font-weight: bold;
+}
+
+.imageupload,
+.logoutButton {
   background-color: #daa38b;
   font-size: 100%;
   border: 2px solid black;
@@ -480,6 +490,11 @@ a.rbc-show-more {
   align-items: center;
   justify-content: center;
   padding: 2px 6px 3px 6px;
+}
+
+.logoutButton {
+  color: black;
+  text-decoration: none;
 }
 
 .week6 {
@@ -726,4 +741,3 @@ a.rbc-show-more {
   background-repeat: no-repeat;
   background-position: center;
 }
-
